--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.31.0"
+openpyxl = "^3.1.2"
+psycopg2 = "^2.9.7"
 
 
 [build-system]
